# alpha-gen-trading

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  dashboard_status.json  main.py  pyproject.toml  pytest.ini  railway_start.py  requirements.txt  run_app.py  run_fast_tests.py  run_pytest.py  run_quick_tests.py  run_tests.py  run_tests_vscode.py  vercel.json
.github/: branch-protection-rules.md
.github/workflows/: branch-protection.yml  ci.yml  deploy.yml
backend/: main.py
backend/models/: schemas.py
backend/routers/: auth.py  market_data.py  websocket.py
backend/services/: schwab_client.py
config/: .env.example  .gitmessage
data/: .coverage  mcp_health_check.json
deploy/: .dockerignore  Dockerfile  Procfile  README.md  docker-compose.yml  railway.env.example  railway.json  vercel.json
docs/: AGENT.md  CLEANUP_SUMMARY.md  DEBUG_GUI.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEVELOPMENT.md  DIRECTORY_STRUCTURE.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_CLEANUP.md  GITHUB_SETUP.md  GIT_WORKFLOW.md  GOOGLE_AUTH_SETUP.md  LAUNCH_CONFIG.md  LAUNCH_TEST.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_SETUP_COMPLETE.md  SETUP.md  TEST_COVERAGE_VISUALIZATION.md  UPDATE_SUMMARY_2025-10-07.md  VERCEL_DEPLOYMENT_PLAN.md  VSCODE_DEBUG_SETUP.md  architecture.md  role_guide.md  test-coverage-architecture.md
docs/setup/: DEBUG.md  REAL_DATA_SETUP.md
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: auth.ts
scripts/: ai_testing_framework.py  dashboard_status.py  deploy_railway.py  mcp_monitor.py  refresh_oauth.py  run_app.py  run_tests.py  run_tests_simple.py  schedule_mcp_checks.py  setup_mcp_monitoring.py
scripts/debug/: debug_app.py  debug_chart_test.py  debug_cli.py
scripts/setup/: get_new_token.py  setup_debug.py  setup_development.py  setup_real_schwab.py  setup_real_schwab_auto.py  setup_schwab_oauth.py
scripts/testing/: check_structure.py  test_chart.py  test_data_flow.py  test_live_chart.py  test_simple_chart.py
src/alphagen/: __init__.py  __main__.py  app.py  cli.py  config.py  option_monitor.py  polygon_stream.py  reports.py  schwab_client.py  schwab_oauth_client.py  signals.py  storage.py  trade_generator.py  trade_manager.py  visualization.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_trading_workflow.py
tests/fixtures/: mock_data.py  test_storage.py
tests/integration/: __init__.py  test_data_flow.py  test_schwab_api.py
tests/unit/: __init__.py  test_app_simple.py  test_cli_comprehensive.py  test_core_modules.py  test_events.py  test_file_chart_comprehensive.py  test_oauth_token.py  test_reports_comprehensive.py  test_signals.py  test_signals_comprehensive.py  test_storage_comprehensive.py  test_storage_simple.py  test_time_utils.py  test_time_utils_comprehensive.py  test_time_utils_simple.py  test_trade_generator_comprehensive.py  test_trade_manager.py  test_trade_manager_comprehensive.py  test_visualization_comprehensive.py  test_visualization_simple.py
(+30 files in other folders)
